# CIS22CH-Capstone-Project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GETTING_STARTED.md  README.md  build_and_run.bat  download_data.bat  download_data.ps1  fly.toml  run_server.bat  vcpkg.json
data/: download_data.bat
src/: main.cpp
